--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.31.1",
+    "aws-sdk": "^2.1475.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -23,6 +24,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "mongoose-delete": "^1.0.1",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1"
   }
 }
